--- a/apps/web/src/pages/Login/LoginForm/LoginForm.module.css
+++ b/apps/web/src/pages/Login/LoginForm/LoginForm.module.css
@@ -20,7 +20,7 @@
 
 .error-message {
   margin-top: 6px;
-  color: var(--red-500);
+  color: var(--red-700);
   font-size: 1.4rem;
 }
 
